Bug 489250 - Prefer usage of vararg method version from MessageFormat.format and NLS.format
Changed to vararg method in all org.eclipse.ui.* projects.

Change-Id: I644c3edb076a0175cfc5f83e17d80737d4634e7b
Signed-off-by: Patrik Suzzi <psuzzi@gmail.com>